# autocomplete

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.md  pyproject.toml
app/: api.py  loader.py  service.py  settings.py  trie.py
app/routers/: autocomplete.py
resources/dictionnaries/: starwars_8k_2018.txt
tests/: conftest.py  test_api.py  test_settings.py  test_trie.py
