[project]
name = "autocomplete"
version = "1.0.0"
description = "FastAPI Trie based auto-completion service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn>=0.33.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.5",
]
